# wows-model-export

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-validation.yml  release.yml
pyinstaller/: NOTES.md  entry.py  wows-webview.spec
src/wows_model_export/: __init__.py  _glb.py  config.py  errors.py  extensions.py  types.py
src/wows_model_export/_static/: .gitattributes  README.md
src/wows_model_export/_static/webview/: index.html
src/wows_model_export/_static/webview/assets/: dds_worker-BT3RzJ7-.js  dds_worker-BT3RzJ7-.js.map  index-Dwm7wW8t.js  index-Dwm7wW8t.js.map  index-Ua0xUHYP.css
src/wows_model_export/cli/: __init__.py  _args.py  _emit.py  accessories_scan.py  build_accessory_library.py  build_ammo_profiles.py  build_decal_library.py  build_environment_library.py  build_projectile_library.py  dedup_textures.py  export_particle_textures.py  find_ship_variants.py  ingest_ship.py  ingest_skin_pack.py  publish.py  rig_normalize_bones.py  scaffold_ship.py  skel_ext_resolve.py  snapshot.py  teardown_ship.py  turret_autorig.py  webview_serve.py
src/wows_model_export/compose/: __init__.py  _atomic.py  _step_runner.py  accessories_scan.py  accessory_library.py  ammo_profiles.py  attached_accessories_library.py  clean_workspace.py  dead_variant_audit.py  decal_library.py  dedup_textures.py  effects_textures.py  environment.py  exterior_hull_hp.py  find_ship_variants.py  ingest_ship.py  library_particles.py  projectile_library.py  publish.py  rig_normalize_bones.py  scaffold_ship.py  sidecar.py  skel_ext_resolve.py  skin_pack.py  snapshot.py  teardown_ship.py  turret_autorig.py
src/wows_model_export/read/: __init__.py  bw_geometry.py  gameparams.py  localization.py  mfm.py  particles.py  sidecar.py  ubersettings.py
src/wows_model_export/resolve/: __init__.py  _kdtree.py  bone_orientation.py  camo.py  exterior_compare.py  exterior_unify.py  gameparams_autofill.py  mesh_compare.py  rig_normalize_bones.py  sidecar.py  skel_ext_hashes.py  synth_emission.py  winding.py
src/wows_model_export/resolve/sidecar/: __init__.py  _absorb.py  _constants.py  _dds_channels.py  _documents.py  _helpers.py  _io.py  _makers.py  _materials.py
src/wows_model_export/server/: __init__.py  jobs.py  main.py  queue.py  static.py  workspace.py
src/wows_model_export/server/routes/: __init__.py  bootstrap.py  cleanup.py  consumers.py  extract.py  gameparams.py  jobs.py  library.py  maps.py  particles.py  projectiles.py  queue.py  repo.py  rig.py  settings.py  ships.py  winding.py
src/wows_model_export/toolkit/: __init__.py  _subprocess.py  ammo.py  armor.py  assets_bin.py  bones.py  gameparams.py  map.py  ship.py  swizzle.py  vfs.py
tests/: census_exterior_hull_swaps.py  test_exterior_unify.py  test_wg_concrete_extraction.py
webview/: .env.example  .gitignore  .prettierignore  .prettierrc.json  INTEGRATION_PLAN.md  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
webview/scripts/: free-port.ps1  kill-dev.ps1
webview/src/: App.svelte  app.d.ts  main.ts
webview/src/components/: AccessoryViewer.svelte  AssetDetail.svelte  AssetList.svelte  BoneInspector.svelte  ConsumerActionForm.svelte  DdsTexturePreview.svelte  DetailBottomPanel.svelte  ExtractJobPanel.svelte  ExtractPreview.svelte  ExtractQueuePanel.svelte  ExtractRunPanel.svelte  ExtractSkinPackForm.svelte  HelpDialog.svelte  JsonTree.svelte  MeshInspector.svelte  PerCategoryCamoInfo.svelte  PermoflagePicker.svelte  ProjectileAmmoUsageList.svelte  ProjectileList.svelte  ProjectileStatsCard.svelte  RigEditorPanel.svelte  ShipBottomPanel.svelte  ShipControls.svelte  ShipHeaderBar.svelte  ShipPicker.svelte  ShipViewer.svelte  VehiclePicker.svelte
webview/src/lib/: extract_events.svelte.ts  nav_state.svelte.ts  router.ts  shortcuts.ts  store.ts  utils.ts
webview/src/lib/accessory/: debug_scene.ts  index.ts  rig_pivots.ts  viewer.ts  winding.ts
webview/src/lib/api/: bootstrap.ts  cleanup.ts  client.ts  consumers.ts  extract.ts  gameparams.ts  index.ts  library.ts  maps.ts  particles.ts  projectiles.ts  queue.ts  repo.ts  settings.ts  ships.ts
webview/src/lib/dds/: bc6h.ts  cube_dds.ts  dds_worker.ts  index.ts  preview.ts  worker_pool.ts
webview/src/lib/extract/: filters.ts  labels.ts
webview/src/lib/ship/: accessory_loader.ts  armor_view.ts  attached_loader.ts  bone_frame_fix.ts  classify_hull.ts  color_mode.ts  damage_cascade.ts  hitbox_view.ts  index.ts  node_overlay.ts  placement.ts  turret_rig.ts  viewer.ts  visibility.ts  wetness.ts
webview/src/lib/ship/camo/: dummies.ts  index.ts  shader.ts  uniforms.ts
webview/src/lib/ship/textures/: category_mask.ts  decode.ts  index.ts  manager.ts  material.ts  types.ts
webview/src/lib/three/: dispose.ts  env_ibl.ts  particles.ts  render_loop.ts  resize.ts  scene.ts  tangents.ts
webview/src/lib/types/: attached.ts  ballistics.ts  categories.ts  consumers.ts  extract.ts  gameparams.ts  hull.ts  index.ts  library.ts  projectiles.ts  rig.ts  ship.ts  sidecar.ts  skin.ts
webview/src/lib/ui/: controls.ts
webview/src/lib/util/: colors.ts  html.ts
webview/src/routes/: Consumers.svelte  Extract.svelte  GameParams.svelte  Library.svelte  Maps.svelte  Particles.svelte  Projectiles.svelte  Settings.svelte  Ships.svelte
webview/src/server/: dev_api.ts  jobs.ts  workspace.ts
webview/src/server/endpoints/: extract.ts  library.ts  repo.ts  ships.ts
webview/src/styles/: app.css
