[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wows-model-export"
version = "0.1.0a1"
description = "Extraction pipeline for World of Warships assets (producer for downstream web / DCC consumers)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Zong" }]
keywords = ["world-of-warships", "wows", "gltf", "asset-pipeline", "wargaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]

# Runtime deps audited from `tools/` imports survey (2026-05-13):
#   numpy   — bw_geometry, rig_normalize_bones, compare_skin_meshes, synth_emission
#   pillow  — synth_emission (DDS round-trip via numpy + PIL)
#   ijson   — compare_exterior_swaps (streams the 2.8 GB GameParams cache)
#
# scipy was previously listed for its KD-tree in resolve/mesh_compare.py; we
# replaced it with an in-house numpy KD-tree (resolve/_kdtree.py) to drop
# ~100 MB from the eventual PyInstaller .exe (scipy + bundled OpenBLAS).
# Performance is acceptable for our mesh sizes (~3k verts/primitive, sub-100ms
# per accessory comparison); trade-off is dropping the 100 MB scipy dep.
#
# Everything else (json, struct, subprocess, pathlib, xml.etree, dataclasses,
# argparse, hashlib, gettext-style .mo decoder) is stdlib.
dependencies = [
    "numpy>=1.26",
    "pillow>=10.0",
    "ijson>=3.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.8",
]
# Webview backend (FastAPI + uvicorn). Opt-in — pipeline users who
# don't run the Svelte dashboard locally shouldn't be forced to install
# the HTTP server stack. Install with `pip install wows-model-export[webview]`.
webview = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
]

# CLI entry points — every composer is wrapped by a `wows-*` shell command.
# See `src/wows_model_export/cli/__init__.py` for the full listing.
[project.scripts]
wows-ingest-ship             = "wows_model_export.cli.ingest_ship:main"
wows-scaffold-ship           = "wows_model_export.cli.scaffold_ship:main"
wows-build-accessory-library = "wows_model_export.cli.build_accessory_library:main"
wows-ingest-skin-pack        = "wows_model_export.cli.ingest_skin_pack:main"
wows-turret-autorig          = "wows_model_export.cli.turret_autorig:main"
wows-skel-ext-resolve        = "wows_model_export.cli.skel_ext_resolve:main"
wows-find-ship-variants      = "wows_model_export.cli.find_ship_variants:main"
wows-teardown-ship           = "wows_model_export.cli.teardown_ship:main"
wows-publish                 = "wows_model_export.cli.publish:main"
wows-snapshot                = "wows_model_export.cli.snapshot:main"
wows-build-projectile-library = "wows_model_export.cli.build_projectile_library:main"
wows-build-decal-library     = "wows_model_export.cli.build_decal_library:main"
wows-build-environment-library = "wows_model_export.cli.build_environment_library:main"
wows-build-ammo-profiles     = "wows_model_export.cli.build_ammo_profiles:main"
wows-dedup-textures          = "wows_model_export.cli.dedup_textures:main"
wows-rig-normalize-bones     = "wows_model_export.cli.rig_normalize_bones:main"
wows-webview-serve           = "wows_model_export.cli.webview_serve:main"

[project.urls]
Homepage = "https://github.com/sqz269/wows-model-export"
Repository = "https://github.com/sqz269/wows-model-export"

[tool.setuptools.packages.find]
where = ["src"]
include = ["wows_model_export*"]

# Bundle the pre-built Svelte UI under `wows_model_export/_static/webview/`
# into the wheel. The mirror is committed to the repo (see
# `src/wows_model_export/_static/README.md` for the rationale); this
# stanza just opts setuptools into shipping non-`.py` files from that
# subtree. Patterns are recursive — `**/*` covers index.html, the
# fingerprinted JS/CSS chunks under assets/, and the .map sourcemaps.
[tool.setuptools.package-data]
wows_model_export = ["_static/webview/**/*", "_static/README.md"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line length — formatter handles
]
